frontend/tests/cases/negative/flatten/flattenSec.gr
leak : forall {a : Type} . a [Private] -> a [Public]
leak x = joiner (spliter x)

spliter : forall {a : Type} . a [Private] -> (a [Private]) [Public]
spliter [x] = [[x]]

joiner : forall {a : Type} . (a [Private]) [Public] -> a [Public]
joiner [[x]] = [x]